Fix graph on mobile.

--- a/development/portfolio/mobile-standard.css
+++ b/development/portfolio/mobile-standard.css
@@ -176,6 +176,54 @@
     }
     
     /***Skills Pane***/
+    .content-div-skills {
+        display: block;
+        width: 98%;
+        height: 82%;
+        border: 0;
+        left: 0;
+        top: 0;
+        opacity: 0;
+        margin: 0;
+    }
+    
+    .bar-graph-container {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: stretch;
+        padding: 0 0 3em;
+        font-size: 2vw;
+        padding: 12%;
+    }
+    
+    .bar-graph {
+        display: flex;
+        flex-wrap: nowrap;
+        border-bottom: 1px solid #bbb7d6;
+        max-height: 25%;
+        flex: 1 1 33%;
+    }
+    
+    .bar-graph__heading {
+        margin: 0.9em 0;
+        font-size: 1.4em;
+        font-weight: normal;
+        text-align: center;
+        flex: 1 1 100%;
+    }
+    
+    .bar-graph__legend {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        flex: 0 1 20%;
+        font-size: 0.9em;
+        padding-top: 0.7em;
+    }
     
     /***Graphics Pane***/
     
